[Elements] Fix adorner size for adorners with icon and fix vertical alignment of adorners
Fixed: 1515574

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -598,7 +598,8 @@ input.custom-search-input::-webkit-search-cancel-button:hover {
 }
 /** Adorner */
 .adorner-container {
-  display: inline-block;
+  display: inline-flex;
+  vertical-align: middle;
 }
 
 .adorner-container.hidden {
